Tambah Section Video
# Conflicts:
#	index.html

Signed-off-by: blinducation <dermawanrendra@gmail.com>

--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@
   background-color: #b9fce6;
 }
 
-#projects {
+#Photography {
   background-color: #b9fce6;
+}
+
+#Videography {
+  background-color: #ffffff;
 }
 
 section {
